Tweaks lights layout to fix broken layout

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -159,13 +159,13 @@ a { color: @anchorColor; }
         display: inline-block;
         vertical-align: top;
         margin-left: 5px;
-        margin-top: 33px;
+        margin-top: 32px;
     }
     .item-toggle {
         display: flex;
         align-items: center;
         float: right;
-        margin-top: 33px;
+        margin-top: 32px;
     }
     h1 {
         font-size: 2.5em;
